--- a/.github/workflows/desktop-app-cd-test.yml
+++ b/.github/workflows/desktop-app-cd-test.yml
@@ -123,14 +123,14 @@ jobs:
         with:
           ref: 'LEAP-635-finalize-release-pipeline-automate-fix'
 
-      - name: Prepare macOS desktop app build
+      - name: Build macOS desktop app build
         uses: nick-fields/retry@v2
         env:
           APPLE_NOTARISATION_PASSWORD: ${{ secrets.APPLE_NOTARISATION_PASSWORD }}
         with:
           timeout_minutes: 16
           max_attempts: 5
-          command: cd packages/desktop-app && ./scripts/macos-build
+          command: cd packages/desktop-app && chmod +x scripts/macos-build-x64.sh && ./scripts/macos-build-x64
 
   build-macos-arm:
     runs-on: macos-latest
@@ -142,54 +142,10 @@ jobs:
           ref: 'LEAP-635-finalize-release-pipeline-automate-fix'
 
       - name: Build macOS desktop app
+        uses: nick-fields/retry@v2
         env:
           APPLE_NOTARISATION_PASSWORD: ${{ secrets.APPLE_NOTARISATION_PASSWORD }}
-        run: |
-          cd packages/desktop-app
-          KEY_CHAIN=build.keychain
-          CERTIFICATE_P12=certificate.p12
-          CERTIFICATE_APPLICATION_P12=certificate-application.p12
-          echo "Recreate the certificate from the secure environment variable"
-          echo "security create-keychain"
-          echo "${{ env.CERTIFICATE_OSX_P12 }}" | base64 --decode > $CERTIFICATE_P12
-          echo "${{ env.CERTIFICATE_APPLICATION_OSX_P12 }}" | base64 --decode > $CERTIFICATE_APPLICATION_P12
-          security create-keychain -p ${{ env.KEYCHAIN_PASSWORD }} $KEY_CHAIN
-          echo "security list-keychains"
-          security list-keychains -s login.keychain build.keychain
-          echo "security default-keychain"
-          security default-keychain -s $KEY_CHAIN
-          echo "security unlock-keychain"
-          security unlock-keychain -p ${{ env.KEYCHAIN_PASSWORD }} $KEY_CHAIN
-          echo "security import"
-          security import $CERTIFICATE_P12 -k $KEY_CHAIN -P '${{ env.DECODE_PASSWORD }}' -T /usr/bin/codesign;
-          security import $CERTIFICATE_APPLICATION_P12 -k $KEY_CHAIN -P '${{ env.DECODE_PASSWORD }}' -T /usr/bin/codesign;
-          echo "security find-identity"
-          security find-identity -v
-          echo "security set-key-partition-list"
-          security set-key-partition-list -S apple-tool:,apple:,codesign:, -s -k ${{ env.KEYCHAIN_PASSWORD }} $KEY_CHAIN
-          rm -fr *.p12
-          npm install
-          npm run set-target-arm64
-
-      - name: Build macOS desktop app
-        uses: nick-fields/retry@v2
         with:
-          timeout_minutes: 13
+          timeout_minutes: 16
           max_attempts: 5
-          command: cd packages/desktop-app && npm run release-mac
-
-      - name: Cleanup Build macOS desktop app
-        run: |
-          cd packages/desktop-app
-          npm run release-mac
-          rm -Rf ./release/mac
-          rm -Rf ./release/mac-unpacked
-          rm -Rf ./release/.cache
-          rm -Rf ./release/builder-debug.yml
-          rm -Rf ./release/builder-effective-config.yaml
-          rm -Rf ./release/mac-arm64
-          TAG_VERSION=${{ needs.tag-validation.outputs.tag-version }}
-          TAG_VERSION=${TAG_VERSION:1}
-          rm "./release/Leapp-$TAG_VERSION-arm64-mac.zip"
-          rm "./release/Leapp-$TAG_VERSION-arm64-mac.zip.blockmap"
-          zip "./release/Leapp-$TAG_VERSION-mac-arm64.zip" "./release/Leapp-$TAG_VERSION-arm64.dmg"
+          command: cd packages/desktop-app && chmod +x scripts/macos-build-arm.sh && ./scripts/macos-build-arm
