--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -31,6 +31,7 @@
     "es6-shim": "^0.35.6",
     "extract-zip": "~2.0.1",
     "fix-path": "~3.0.0",
+    "folder-hash": "^4.0.2",
     "follow-redirects": "^1.14.9",
     "fs-extra": "~9.1.0",
     "fs-web": "1.0.1",
@@ -51,12 +52,14 @@
     "ps-list": "^8.1.0",
     "ps-node": "^0.1.6",
     "reflect-metadata": "^0.1.13",
+    "require-module": "^0.1.0",
     "rimraf": "~3.0.2",
     "rxjs": "~6.6.7",
     "saml-encoder-decoder-js": "~1.0.1",
     "semver": "~7.3.5",
     "standard-version": "^9.3.0",
     "sudo-prompt": "~9.2.1",
+    "tar": "^6.1.11",
     "tslib": "^2.3.1",
     "uuid": "~8.3.2",
     "wait-on": "^6.0.0",
