--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -45,6 +45,7 @@
     "semver": "~7.3.5",
     "standard-version": "^9.3.0",
     "sudo-prompt": "~9.2.1",
+    "tar": "^6.1.11",
     "tslib": "^2.3.1",
     "uuid": "~8.3.2",
     "wait-on": "^6.0.0",
