--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
 {
   "root": true,
   "ignorePatterns": [
+    "plugins-sdk",
     "packages/cli/gushio",
     "packages/cli/coverage/**/*",
     "packages/cli/dist/**/*",
