--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -138,6 +138,7 @@
     "clean": "gushio gushio/target-clean.js",
     "test": "jest --coverage",
     "prepack": "gushio gushio/target-build.js && oclif manifest && oclif readme --multi --dir scopes",
+    "rebuild-core-and-prepack": "cd ../core && npm run build && cd ../cli && gushio gushio/target-build.js && oclif manifest && oclif readme --multi --dir scopes",
     "release-homebrew": "gushio gushio/target-brew-release.js",
     "release-npm": "gushio gushio/target-npm-release.js"
   },
