--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -139,7 +139,8 @@
     "test": "jest --coverage",
     "prepack": "gushio gushio/target-build.js && oclif manifest && oclif readme --multi --dir scopes",
     "release-homebrew": "gushio gushio/target-brew-release.js",
-    "release-npm": "gushio gushio/target-npm-release.js"
+    "release-npm": "gushio gushio/target-npm-release.js",
+    "run-plugin": "./bin/run session run-aws-credential-plugin"
   },
   "types": "dist/index.d.ts"
 }
