--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -46,9 +46,9 @@ nav:
       - 'EC2 connect through AWS SSM': 'built-in-features/aws-ec2-connect.md'
       - 'AWS Multi-profile management': 'built-in-features/aws-named-profiles.md'
       - 'Opening AWS Web Console': 'built-in-features/opening-web-console.md'
-      - 'Plugin System':
-          - 'Documentation': 'built-in-features/plugin-system-documentation.md'
-          - 'Install and use Plugins': 'built-in-features/plugin-system-usage.md'
+  - 'Plugins':
+      - 'Introduction to Plugins': 'plugins/plugins-introduction.md'
+      - 'Developer Reference': 'plugins/plugins-development.md'
   - 'General Options': 'built-in-features/general-options.md'
   - 'Roadmap': https://roadmap.leapp.cloud/tabs/4-in-progress
   - Contributing:
