fix: unable to run aws cli installed using homebrew on macos

--- a/packages/desktop-app/angular.json
+++ b/packages/desktop-app/angular.json
@@ -38,7 +38,7 @@
             "scripts": [],
             "optimization": false,
             "outputHashing": "all",
-            "sourceMap": false,
+            "sourceMap": true,
             "namedChunks": false,
             "extractLicenses": true,
             "vendorChunk": false,
