chore(release): release core v0.1.122

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@noovolari/leapp-core",
-  "version": "0.1.122-rc1",
+  "version": "0.1.122",
   "author": {
     "name": "Noovolari",
     "email": "info@noovolari.com"
