chore: testing chromewebdriver and selenium to control desktop app

--- a/packages/desktop-app/package.json
+++ b/packages/desktop-app/package.json
@@ -18,6 +18,7 @@
     "release": "standard-version",
     "ng": "ng",
     "test": "ng test",
+    "integration-test": "pkill chromedriver && ./node_modules/.bin/chromedriver & sleep 2 && jest && pkill chromedriver",
     "build-dev": "gushio gushio/target-build.js aot",
     "build-prod": "gushio gushio/target-build.js 'configuration production'",
     "run-local": "electron --enable-accelerated-mjpeg-decode --enable-accelerated-video --ignore-gpu-blacklist --enable-native-gpu-memory-buffers --enable-gpu-rasterization --ignore-gpu-blacklist .",
@@ -217,11 +218,14 @@
     "@angular/cli": "^13.2.2",
     "@angular/compiler-cli": "^13.2.2",
     "@angular/language-service": "^13.2.2",
+    "@babel/preset-env": "^7.16.5",
+    "@babel/preset-typescript": "^7.16.5",
     "@biesbjerg/ngx-translate-extract": "^7.0.4",
     "@commitlint/cli": "16.2.1",
     "@commitlint/config-conventional": "16.2.1",
     "@types/jasmine": "^3.7.0",
     "@types/jasminewd2": "~2.0.8",
+    "@types/jest": "^27.4.1",
     "@types/node": "^16.9.4",
     "@types/node-ipc": "9.2.0",
     "@types/uuid": "^8.3.0",
@@ -229,6 +233,7 @@
     "electron": "^15.5.0",
     "electron-builder": "^23.0.2",
     "electron-builder-squirrel-windows": "22.14.3",
+    "electron-chromedriver": "^15.0.0",
     "electron-packager": "15.4.0",
     "electron-rebuild": "3.2.3",
     "gushio": "~0.7.0",
@@ -236,6 +241,7 @@
     "jasmine": "^3.7.0",
     "jasmine-core": "~3.7.1",
     "jasmine-spec-reporter": "~7.0.0",
+    "jest": "^27.4.5",
     "karma": "^6.3.2",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.3",
@@ -246,6 +252,7 @@
     "node-abi": "^2.26.0",
     "nyc": "^15.1.0",
     "protractor": "^7.0.0",
+    "selenium-webdriver": "^4.4.0",
     "ts-node": "^9.1.1",
     "typescript": "4.5.5",
     "util": "^0.12.4"
