--- a/packages/desktop-app/package.json
+++ b/packages/desktop-app/package.json
@@ -18,10 +18,7 @@
     "release": "standard-version",
     "ng": "ng",
     "test": "ng test",
-    "integration-test": "jest",
-    "mac-integration-test": "./node_modules/.bin/chromedriver & npm run integration-test && pkill chromedriver",
-    "win-integration-test": "start /min node_modules\\.bin\\chromedriver.cmd && npm run integration-test && taskkill /f /im chromedriver.exe",
-    "linux-integration-test": "./node_modules/.bin/chromedriver & npm run integration-test && pkill chromedriver",
+    "integration-test": "gushio gushio/run-integration-test.js",
     "build-dev": "gushio gushio/target-build.js aot",
     "build-prod": "gushio gushio/target-build.js 'configuration production'",
     "run-local": "electron --enable-accelerated-mjpeg-decode --enable-accelerated-video --ignore-gpu-blacklist --enable-native-gpu-memory-buffers --enable-gpu-rasterization --ignore-gpu-blacklist .",
