--- a/.github/workflows/desktop-app-test-ci.yml
+++ b/.github/workflows/desktop-app-test-ci.yml
@@ -18,9 +18,8 @@ jobs:
         run: |
           npm run bootstrap
           npm run set-dev-environment
-          cd packages/desktop-app
 
       - name: Run headless test
         uses: GabrielBB/xvfb-action@v1
         with:
-          run: npm run integration-test
+          run: cd packages/desktop-app && npm run integration-test
