chore: pipeline xvfb

--- a/.github/workflows/desktop-app-test-ci.yml
+++ b/.github/workflows/desktop-app-test-ci.yml
@@ -9,7 +9,7 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [macos-latest, ubuntu-latest, windows-latest]
+        os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
@@ -22,4 +22,4 @@ jobs:
       - name: Run headless test
         uses: GabrielBB/xvfb-action@v1
         with:
-          run: cd packages/desktop-app && npm run integration-test
+          run: npm run --prefix packages/desktop-app integration-test
