--- a/.github/workflows/desktop-app-test-ci.yml
+++ b/.github/workflows/desktop-app-test-ci.yml
@@ -12,50 +12,59 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Test macOS desktop app
+      - name: Dependency caching
+        uses: actions/cache@v3
         with:
           node-version: '16'
           cache: 'npm'
           cache-dependency-path: |
             packages/desktop-app/package-lock.json
             packages/core/package-lock.json
-          run: |
-            npm run bootstrap
-            npm run set-dev-environment
-            npm run --prefix packages/desktop-app integration-test
+
+      - name: Test macOS desktop app
+        run: |
+          npm run bootstrap
+          npm run set-dev-environment
+          npm run --prefix packages/desktop-app integration-test
 
   integration-test-win:
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v3
 
-      - name: Test Windows desktop app
+      - name: Dependency caching
+        uses: actions/cache@v3
         with:
           node-version: '16'
           cache: 'npm'
           cache-dependency-path: |
             packages/desktop-app/package-lock.json
             packages/core/package-lock.json
-          run: |
-            npm run bootstrap
-            npm run set-dev-environment
-            npm run --prefix packages/desktop-app integration-test
+
+      - name: Test Windows desktop app
+        run: |
+          npm run bootstrap
+          npm run set-dev-environment
+          npm run --prefix packages/desktop-app integration-test
 
   integration-test-linux:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
 
-      - name: Setup Project
+      - name: Dependency caching
+        uses: actions/cache@v3
         with:
           node-version: '16'
           cache: 'npm'
           cache-dependency-path: |
             packages/desktop-app/package-lock.json
             packages/core/package-lock.json
-          run: |
-            npm run bootstrap
-            npm run set-dev-environment
+
+      - name: Setup Project
+        run: |
+          npm run bootstrap
+          npm run set-dev-environment
 
       - name: Test Linux Headless desktop app
         uses: GabrielBB/xvfb-action@v1
