chore: fix pipelineù

--- a/.github/workflows/desktop-app-test-ci.yml
+++ b/.github/workflows/desktop-app-test-ci.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Dependency caching
-        uses: actions/cache@v3
+        uses: actions/setup-node@v3
         with:
           node-version: '16'
           cache: 'npm'
@@ -33,7 +33,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Dependency caching
-        uses: actions/cache@v3
+        uses: actions/setup-node@v3
         with:
           node-version: '16'
           cache: 'npm'
@@ -53,7 +53,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Dependency caching
-        uses: actions/cache@v3
+        uses: actions/setup-node@v3
         with:
           node-version: '16'
           cache: 'npm'
