chore: added github action part for running creation of env file

--- a/.github/workflows/desktop-app-test-ci.yml
+++ b/.github/workflows/desktop-app-test-ci.yml
@@ -25,6 +25,7 @@ jobs:
         run: |
           npm run bootstrap
           npm run set-dev-environment
+          gushio packages/desktop-app/gushio/create-pipeline-testing-env-file.js ${{ secrets.INTEGRATION_TEST_ENVIRONMENT }}
           npm run --prefix packages/desktop-app integration-test
 
   integration-test-win:
@@ -45,6 +46,7 @@ jobs:
         run: |
           npm run bootstrap
           npm run set-dev-environment
+          gushio packages/desktop-app/gushio/create-pipeline-testing-env-file.js ${{ secrets.INTEGRATION_TEST_ENVIRONMENT }}
           npm run --prefix packages/desktop-app integration-test
 
   integration-test-linux:
@@ -65,6 +67,7 @@ jobs:
         run: |
           npm run bootstrap
           npm run set-dev-environment
+          gushio packages/desktop-app/gushio/create-pipeline-testing-env-file.js ${{ secrets.INTEGRATION_TEST_ENVIRONMENT }}
 
       - name: Test Linux Headless desktop app
         uses: GabrielBB/xvfb-action@v1
