--- a/.github/workflows/desktop-app-test-ci.yml
+++ b/.github/workflows/desktop-app-test-ci.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - LEAP-680-spike-integration-tests
 
+env:
+  INTEGRATION_TEST_ENVIRONMENT: ${{ secrets.INTEGRATION_TEST_ENVIRONMENT }}
+
 jobs:
 
   integration-test-macos:
@@ -25,7 +28,8 @@ jobs:
         run: |
           npm run bootstrap
           npm run set-dev-environment
-          npx gushio packages/desktop-app/gushio/create-pipeline-testing-env-file.js ${{ secrets.INTEGRATION_TEST_ENVIRONMENT }}
+          echo ${{ env.INTEGRATION_TEST_ENVIRONMENT }}
+          npx gushio packages/desktop-app/gushio/create-pipeline-testing-env-file.js ${{ env.INTEGRATION_TEST_ENVIRONMENT }}
           npm run --prefix packages/desktop-app integration-test
 
   integration-test-win:
