--- a/.github/workflows/desktop-app-test-ci.yml
+++ b/.github/workflows/desktop-app-test-ci.yml
@@ -29,7 +29,7 @@ jobs:
           npm run bootstrap
           npm run set-dev-environment
           echo ${{ env.INTEGRATION_TEST_ENVIRONMENT }}
-          npx gushio packages/desktop-app/gushio/create-pipeline-testing-env-file.js ${{ env.INTEGRATION_TEST_ENVIRONMENT }}
+          npx gushio packages/desktop-app/gushio/create-pipeline-testing-env-file.js '${{ env.INTEGRATION_TEST_ENVIRONMENT }}'
           npm run --prefix packages/desktop-app integration-test
 
   integration-test-win:
@@ -50,7 +50,7 @@ jobs:
         run: |
           npm run bootstrap
           npm run set-dev-environment
-          npx gushio packages/desktop-app/gushio/create-pipeline-testing-env-file.js ${{ secrets.INTEGRATION_TEST_ENVIRONMENT }}
+          npx gushio packages/desktop-app/gushio/create-pipeline-testing-env-file.js '${{ env.INTEGRATION_TEST_ENVIRONMENT }}'
           npm run --prefix packages/desktop-app integration-test
 
   integration-test-linux:
@@ -71,7 +71,7 @@ jobs:
         run: |
           npm run bootstrap
           npm run set-dev-environment
-          npx gushio packages/desktop-app/gushio/create-pipeline-testing-env-file.js ${{ secrets.INTEGRATION_TEST_ENVIRONMENT }}
+          npx gushio packages/desktop-app/gushio/create-pipeline-testing-env-file.js '${{ env.INTEGRATION_TEST_ENVIRONMENT }}'
 
       - name: Test Linux Headless desktop app
         uses: GabrielBB/xvfb-action@v1
