chore: coverted secret from yml to json for windows compatibility

--- a/.github/workflows/desktop-app-test-ci.yml
+++ b/.github/workflows/desktop-app-test-ci.yml
@@ -19,7 +19,7 @@ jobs:
         run: |
           npm run bootstrap
           npm run set-dev-environment
-          npx gushio packages/desktop-app/gushio/create-pipeline-testing-env-file.js '${{ env.INTEGRATION_TEST_ENVIRONMENT }}'
+          npx gushio packages/desktop-app/gushio/create-pipeline-testing-env-file.js "${{ env.INTEGRATION_TEST_ENVIRONMENT }}"
           npm run --prefix packages/desktop-app integration-test
 
   integration-test-win:
@@ -31,7 +31,7 @@ jobs:
         run: |
           npm run bootstrap
           npm run set-dev-environment
-          npx gushio packages/desktop-app/gushio/create-pipeline-testing-env-file.js '${{ env.INTEGRATION_TEST_ENVIRONMENT }}'
+          npx gushio packages/desktop-app/gushio/create-pipeline-testing-env-file.js "${{ env.INTEGRATION_TEST_ENVIRONMENT }}"
           npm run --prefix packages/desktop-app integration-test
 
   integration-test-linux:
@@ -43,7 +43,7 @@ jobs:
         run: |
           npm run bootstrap
           npm run set-dev-environment
-          npx gushio packages/desktop-app/gushio/create-pipeline-testing-env-file.js '${{ env.INTEGRATION_TEST_ENVIRONMENT }}'
+          npx gushio packages/desktop-app/gushio/create-pipeline-testing-env-file.js "${{ env.INTEGRATION_TEST_ENVIRONMENT }}"
 
       - name: Test Linux Headless desktop app
         uses: GabrielBB/xvfb-action@v1
