--- a/.github/workflows/desktop-app-test-ci.yml
+++ b/.github/workflows/desktop-app-test-ci.yml
@@ -22,4 +22,29 @@ jobs:
           npx gushio packages/desktop-app/gushio/create-pipeline-testing-env-file.js "${{ env.INTEGRATION_TEST_ENVIRONMENT }}"
           npm run --prefix packages/desktop-app integration-test
 
+  integration-test-win:
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Test Windows desktop app
+        run: |
+          npm run bootstrap
+          npm run set-dev-environment
+          npx gushio packages/desktop-app/gushio/create-pipeline-testing-env-file.js "${{ env.INTEGRATION_TEST_ENVIRONMENT }}"
+          npm run --prefix packages/desktop-app integration-test
 
+  integration-test-linux:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Setup Project
+        run: |
+          npm run bootstrap
+          npm run set-dev-environment
+          npx gushio packages/desktop-app/gushio/create-pipeline-testing-env-file.js "${{ env.INTEGRATION_TEST_ENVIRONMENT }}"
+
+      - name: Test Linux Headless desktop app
+        uses: GabrielBB/xvfb-action@v1
+        with:
+          run: npm run --prefix packages/desktop-app integration-test
