--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -141,7 +141,8 @@
     "rebuild-core-and-prepack": "cd ../core && npm run build && cd ../cli && gushio gushio/target-build.js && oclif manifest && oclif readme --multi --dir scopes",
     "release-homebrew": "gushio gushio/target-brew-release.js",
     "release-npm": "gushio gushio/target-npm-release.js",
-    "run-plugin": "./bin/run session run-aws-credential-plugin"
+    "run-plugin": "./bin/run session run-aws-credential-plugin",
+    "nightly": "gushio gushio/target-nightly.js"
   },
   "types": "dist/index.d.ts"
 }
