--- a/.github/workflows/desktop-app-nightly-cd.yml
+++ b/.github/workflows/desktop-app-nightly-cd.yml
@@ -32,9 +32,28 @@ jobs:
         run: |
           aws s3 rm "${{ env.S3_BUCKET }}/nightly/latest-temp" --recursive
 
+  build-and-release-core-and-cli:
+    runs-on: ubuntu-latest
+    needs: [ clean-nightly-latest ]
+    steps:
+      - uses: actions/checkout@v3
+      - name: Build and release core (nightly)
+        run: |
+          cd packages/core
+
+          npm install
+          npm run nightly
+
+      - name: Build and release CLI (nightly)
+        run: |
+          cd packages/cli
+
+          npm install
+          npm run nightly
+
   build-win:
     runs-on: windows-2022
-    needs: [ clean-nightly-latest ]
+    needs: [ build-and-release-core-and-cli ]
     steps:
       - name: Prepare GIT
         shell: bash
@@ -87,12 +106,12 @@ jobs:
           cd packages/desktop-app
 
           TAG_VERSION=$(cat nightly-version)
-          aws s3 cp ./release/ "${{ env.S3_BUCKET }}/nightly/$TAG_VERSION/" --recursive
+          aws s3 cp ./release/ "${{ env.S3_BUCKET }}/nightly/" --recursive
           aws s3 cp ./release/ "${{ env.S3_BUCKET }}/nightly/latest-temp/" --recursive
 
   build-linux:
     runs-on: ubuntu-latest
-    needs: [ clean-nightly-latest ]
+    needs: [ build-and-release-core-and-cli ]
     steps:
       - uses: actions/checkout@v3
 
@@ -118,12 +137,12 @@ jobs:
         run: |
           cd packages/desktop-app
           TAG_VERSION=$(cat nightly-version)
-          aws s3 cp ./release/ "${{ env.S3_BUCKET }}/nightly/$TAG_VERSION/" --recursive
+          aws s3 cp ./release/ "${{ env.S3_BUCKET }}/nightly/" --recursive
           aws s3 cp ./release/ "${{ env.S3_BUCKET }}/nightly/latest-temp/" --recursive
 
   build-macos-x64:
     runs-on: macos-latest
-    needs: [ clean-nightly-latest ]
+    needs: [ build-and-release-core-and-cli ]
     steps:
       - uses: actions/checkout@v3
 
@@ -187,12 +206,12 @@ jobs:
         run: |
           cd packages/desktop-app
           TAG_VERSION=$(cat nightly-version)
-          aws s3 cp ./release/ "${{ env.S3_BUCKET }}/nightly/$TAG_VERSION/" --recursive
+          aws s3 cp ./release/ "${{ env.S3_BUCKET }}/nightly/" --recursive
           aws s3 cp ./release/ "${{ env.S3_BUCKET }}/nightly/latest-temp/" --recursive
 
   build-macos-arm:
     runs-on: macos-latest
-    needs: [ clean-nightly-latest, build-macos-x64 ]
+    needs: [ build-and-release-core-and-cli, build-macos-x64 ]
     steps:
       - uses: actions/checkout@v3
 
@@ -257,7 +276,7 @@ jobs:
         run: |
           cd packages/desktop-app
           TAG_VERSION=$(cat nightly-version)
-          aws s3 cp ./release/ "${{ env.S3_BUCKET }}/nightly/$TAG_VERSION/" --recursive
+          aws s3 cp ./release/ "${{ env.S3_BUCKET }}/nightly/" --recursive
           aws s3 cp ./release/ "${{ env.S3_BUCKET }}/nightly/latest-temp/" --recursive
 
   publish-nightly-draft:
