--- a/.github/workflows/desktop-app-nightly-cd.yml
+++ b/.github/workflows/desktop-app-nightly-cd.yml
@@ -1,6 +1,9 @@
 name: Leapp Desktop App Nightly CD
 
 on:
+  push:
+    branches:
+      - LEAP-690-leapp-plugin-not-installing-on-app-start
   schedule:
     - cron: '0 0 * * *'
   workflow_dispatch:
