--- a/packages/desktop-app/package.json
+++ b/packages/desktop-app/package.json
@@ -24,6 +24,7 @@
     "build-and-run-dev": "gushio gushio/target-build-and-run.js aot",
     "rebuild-core-and-run-dev": "cd ../core && npm run build && cd ../desktop-app && npm run build-and-run-dev",
     "release-mac": "gushio gushio/target-release.js 'configuration production' mac",
+    "release-mac-dev": "gushio gushio/target-release-dev.js 'configuration staging' mac",
     "release-linux": "gushio gushio/target-release.js 'configuration production' linux",
     "release-win": "gushio gushio/target-release.js \"configuration production\" win",
     "release-all": "gushio gushio/target-release.js 'configuration production' all",
@@ -32,6 +33,12 @@
     "nightly": "gushio gushio/target-nightly.js mac"
   },
   "build": {
+    "protocols": {
+      "name": "leapp-deep-linking",
+      "schemes": [
+        "leapp"
+      ]
+    },
     "publish": [
       {
         "provider": "github",
