--- a/packages/desktop-app/package.json
+++ b/packages/desktop-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Leapp",
-  "version": "0.14.3",
+  "version": "0.14.3-nightly.20220930",
   "private": true,
   "author": {
     "name": "Noovolari",
@@ -30,7 +30,9 @@
     "release-all": "gushio gushio/target-release.js 'configuration production' all",
     "set-target-arm64": "gushio gushio/set-target-arch.js arm64",
     "set-target-x64": "gushio gushio/set-target-arch.js x64",
-    "nightly": "gushio gushio/target-nightly.js mac"
+    "nightly": "gushio gushio/target-nightly.js mac",
+    "nightly-win": "gushio gushio/target-nightly.js win",
+    "nightly-linux": "gushio gushio/target-nightly.js linux"
   },
   "build": {
     "protocols": {
@@ -150,7 +152,7 @@
     "@ngx-translate/core": "~13.0.0",
     "@ngx-translate/http-loader": "~6.0.0",
     "@noovolari/dpapi-addon": "0.1.2",
-    "@noovolari/leapp-core": "0.1.122",
+    "@noovolari/leapp-core": "npm:@noovolari/leapp-core-nightly@latest",
     "@types/aws-sdk": "^2.7.0",
     "assert": "2.0.0",
     "aws-sdk": "2.928.0",
