chore: trying hook for win32 for plugin deep link

--- a/packages/desktop-app/package.json
+++ b/packages/desktop-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Leapp",
-  "version": "0.14.3-nightly.20220930",
+  "version": "0.14.3",
   "private": true,
   "author": {
     "name": "Noovolari",
@@ -152,7 +152,7 @@
     "@ngx-translate/core": "~13.0.0",
     "@ngx-translate/http-loader": "~6.0.0",
     "@noovolari/dpapi-addon": "0.1.2",
-    "@noovolari/leapp-core": "npm:@noovolari/leapp-core-nightly@latest",
+    "@noovolari/leapp-core": "../core/dist",
     "@types/aws-sdk": "^2.7.0",
     "assert": "2.0.0",
     "aws-sdk": "2.928.0",
