--- a/packages/desktop-app/package.json
+++ b/packages/desktop-app/package.json
@@ -93,11 +93,15 @@
       "description": "Leapp Client is a tool that allows the user to obtain secure, temporary and refreshable credentials to access AWS Services with AWS CLI and tools based on it, with versioning tools that work with AWS CodeCommit service and to easily use AWS SDK from your local environment during your everyday development.",
       "icon": "src/assets/icons/1024x1024.png",
       "desktop": {
-        "Icon": "/usr/share/icons/hicolor/256x256/apps/leapp.png"
+        "Icon": "/usr/share/icons/hicolor/256x256/apps/leapp.png",
+        "exec": "leapp %U"
       },
       "target": [
         "deb",
         "AppImage"
+      ],
+      "mimeTypes": [
+        "x-scheme-handler/leapp"
       ]
     },
     "mac": {
