chore: changed integration-test-macos image

--- a/.github/workflows/desktop-app-test-ci.yml
+++ b/.github/workflows/desktop-app-test-ci.yml
@@ -11,7 +11,7 @@ env:
 jobs:
 
   integration-test-macos:
-    runs-on: macos-latest
+    runs-on: macos-12
     steps:
       - uses: actions/checkout@v3
 
