--- a/packages/desktop-app/package.json
+++ b/packages/desktop-app/package.json
@@ -231,11 +231,11 @@
     "@types/node": "^16.9.4",
     "@types/node-ipc": "9.2.0",
     "@types/uuid": "^8.3.0",
+    "chromedriver": "94.0.0",
     "dotenv": "^10.0.0",
     "electron": "^15.5.0",
     "electron-builder": "^23.0.2",
     "electron-builder-squirrel-windows": "22.14.3",
-    "electron-chromedriver": "^15.0.0",
     "electron-packager": "15.4.0",
     "electron-rebuild": "3.2.3",
     "gushio": "~0.7.0",
