chore: integration tests attempt 15

--- a/packages/desktop-app/package.json
+++ b/packages/desktop-app/package.json
@@ -18,7 +18,8 @@
     "release": "standard-version",
     "ng": "ng",
     "test": "ng test",
-    "integration-test": "gushio gushio/run-integration-test.js",
+    "integration-test-1": "gushio gushio/run-integration-test-1.js",
+    "integration-test-2": "gushio gushio/run-integration-test-2.js",
     "build-dev": "gushio gushio/target-build.js aot",
     "build-prod": "gushio gushio/target-build.js 'configuration production'",
     "run-local": "electron --enable-accelerated-mjpeg-decode --enable-accelerated-video --ignore-gpu-blacklist --enable-native-gpu-memory-buffers --enable-gpu-rasterization --ignore-gpu-blacklist .",
