--- a/.github/workflows/desktop-app-test-ci.yml
+++ b/.github/workflows/desktop-app-test-ci.yml
@@ -14,37 +14,46 @@ jobs:
     runs-on: macos-12
     steps:
       - uses: actions/checkout@v3
-
-      - name: Test macOS desktop app
+      - name: Checkout
         run: |
           npm run bootstrap
           npm run set-dev-environment
-          npx gushio packages/desktop-app/gushio/create-pipeline-testing-env-file.js "${{ env.INTEGRATION_TEST_ENVIRONMENT }}"
-          npm run --prefix packages/desktop-app integration-test
+          cd packages/desktop-app
+          npm run build-dev
+          npx gushio ./gushio/create-pipeline-testing-env-file.js "${{ env.INTEGRATION_TEST_ENVIRONMENT }}"
 
-  integration-test-win:
-    runs-on: windows-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Test Windows desktop app
+      - name: Test 1 macOS desktop app
         run: |
-          npm run bootstrap
-          npm run set-dev-environment
-          npx gushio packages/desktop-app/gushio/create-pipeline-testing-env-file.js "${{ env.INTEGRATION_TEST_ENVIRONMENT }}"
-          npm run --prefix packages/desktop-app integration-test
+          npm run --prefix packages/desktop-app integration-test-1
+# try to delete leapp.lock
 
-  integration-test-linux:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Setup Project
+      - name: Test 2 macOS desktop app
         run: |
-          npm run bootstrap
-          npm run set-dev-environment
-          npx gushio packages/desktop-app/gushio/create-pipeline-testing-env-file.js "${{ env.INTEGRATION_TEST_ENVIRONMENT }}"
+          npm run --prefix packages/desktop-app integration-test-2
 
-      - name: Test Linux Headless desktop app
-        uses: GabrielBB/xvfb-action@v1
-        with:
-          run: npm run --prefix packages/desktop-app integration-test
+#  integration-test-win:
+#    runs-on: windows-latest
+#    steps:
+#      - uses: actions/checkout@v3
+#      - name: Test Windows desktop app
+#        run: |
+#          npm run bootstrap
+#          npm run set-dev-environment
+#          npx gushio packages/desktop-app/gushio/create-pipeline-testing-env-file.js "${{ env.INTEGRATION_TEST_ENVIRONMENT }}"
+#          npm run --prefix packages/desktop-app integration-test
+#
+#  integration-test-linux:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v3
+#
+#      - name: Setup Project
+#        run: |
+#          npm run bootstrap
+#          npm run set-dev-environment
+#          npx gushio packages/desktop-app/gushio/create-pipeline-testing-env-file.js "${{ env.INTEGRATION_TEST_ENVIRONMENT }}"
+#
+#      - name: Test Linux Headless desktop app
+#        uses: GabrielBB/xvfb-action@v1
+#        with:
+#          run: npm run --prefix packages/desktop-app integration-test
