chore: integration tests attempt 31

--- a/.github/workflows/desktop-app-test-ci.yml
+++ b/.github/workflows/desktop-app-test-ci.yml
@@ -25,6 +25,9 @@ jobs:
       - name: Test macOS desktop app
         run: |
           npm run --prefix packages/desktop-app integration-test-1
+          test -f ~/Library/Logs/Leapp/log.electronService.log && echo "leapp log exists."
+          rm ~/Library/Logs/Leapp/log.electronService.log
+          test -f ~/Library/Logs/Leapp/log.electronService.log && echo "leapp log exists."
           npm run --prefix packages/desktop-app integration-test-2
 
 #  integration-test-win:
